adjust account related methods to auth feature * adjust some method names * tidy go mod
