# feature/tenant/handler/tenant.go
@@ -12,21 +12,18 @@ import (
 
 // TenantHandlerInterface is the interface for the handler.
 type TenantHandlerInterface interface {
-	AccountTenantHandler(c *gin.Context)
-	AccountTenantsHandler(c *gin.Context)
-	CreateTenantHandler(c *gin.Context)
-	UserTenantHandler(c *gin.Context)
-	UpdateTenantHandler(c *gin.Context)
-	GetTenantHandler(c *gin.Context)
-	GetTenantMenuHandler(c *gin.Context)
-	DeleteTenantHandler(c *gin.Context)
-	ListTenantHandler(c *gin.Context)
-	ListTenantAssetHandler(c *gin.Context)
-	ListTenantRoleHandler(c *gin.Context)
-	ListTenantModuleHandler(c *gin.Context)
-	ListTenantSettingHandler(c *gin.Context)
-	ListTenantUserHandler(c *gin.Context)
-	ListTenantGroupHandler(c *gin.Context)
+	Create(c *gin.Context)
+	UserOwn(c *gin.Context)
+	Update(c *gin.Context)
+	Get(c *gin.Context)
+	GetMenus(c *gin.Context)
+	Delete(c *gin.Context)
+	List(c *gin.Context)
+	ListAssets(c *gin.Context)
+	ListRoles(c *gin.Context)
+	GetSetting(c *gin.Context)
+	ListUsers(c *gin.Context)
+	ListGroups(c *gin.Context)
 }
 
 // TenantHandler represents the handler.
@@ -41,45 +38,7 @@ func NewTenantHandler(svc *service.Service) TenantHandlerInterface {
 	}
 }
 
-// AccountTenantHandler handles reading the current user's tenant.
-//
-// @Summary Get current user tenant
-// @Description Retrieve the tenant associated with the current user.
-// @Tags account
-// @Produce json
-// @Success 200 {object} structs.ReadTenant "success"
-// @Failure 400 {object} resp.Exception "bad request"
-// @Router /v1/account/tenant [get]
-// @Security Bearer
-func (h *TenantHandler) AccountTenantHandler(c *gin.Context) {
-	result, err := h.s.Tenant.Account(c.Request.Context())
-	if err != nil {
-		resp.Fail(c.Writer, resp.BadRequest(err.Error()))
-		return
-	}
-	resp.Success(c.Writer, result)
-}
-
-// AccountTenantsHandler handles reading the current user's tenants.
-//
-// @Summary Get current user tenants
-// @Description Retrieve the tenant associated with the current user.
-// @Tags account
-// @Produce json
-// @Success 200 {object} structs.ReadTenant "success"
-// @Failure 400 {object} resp.Exception "bad request"
-// @Router /v1/account/tenants [get]
-// @Security Bearer
-func (h *TenantHandler) AccountTenantsHandler(c *gin.Context) {
-	result, err := h.s.Tenant.AccountTenants(c.Request.Context())
-	if err != nil {
-		resp.Fail(c.Writer, resp.BadRequest(err.Error()))
-		return
-	}
-	resp.Success(c.Writer, result)
-}
-
-// CreateTenantHandler handles creating a tenant.
+// Create handles creating a tenant.
 //
 // @Summary Create tenant
 // @Description Create a new tenant.
@@ -91,7 +50,7 @@ func (h *TenantHandler) AccountTenantsHandler(c *gin.Context) {
 // @Failure 400 {object} resp.Exception "bad request"
 // @Router /v1/tenants [post]
 // @Security Bearer
-func (h *TenantHandler) CreateTenantHandler(c *gin.Context) {
+func (h *TenantHandler) Create(c *gin.Context) {
 	body := &structs.CreateTenantBody{}
 	if validationErrors, err := helper.ShouldBindAndValidateStruct(c, body); err != nil {
 		resp.Fail(c.Writer, resp.BadRequest(err.Error()))
@@ -109,7 +68,7 @@ func (h *TenantHandler) CreateTenantHandler(c *gin.Context) {
 	resp.Success(c.Writer, result)
 }
 
-// UserTenantHandler handles reading a user's tenant.
+// UserOwn handles reading a user's tenant.
 //
 // @Summary Get user owned tenant
 // @Description Retrieve the tenant associated with the specified user.
@@ -120,7 +79,7 @@ func (h *TenantHandler) CreateTenantHandler(c *gin.Context) {
 // @Failure 400 {object} resp.Exception "bad request"
 // @Router /v1/users/{username}/tenant [get]
 // @Security Bearer
-func (h *TenantHandler) UserTenantHandler(c *gin.Context) {
+func (h *TenantHandler) UserOwn(c *gin.Context) {
 	result, err := h.s.Tenant.UserOwn(c.Request.Context(), c.Param("username"))
 	if err != nil {
 		resp.Fail(c.Writer, resp.BadRequest(err.Error()))
@@ -129,7 +88,7 @@ func (h *TenantHandler) UserTenantHandler(c *gin.Context) {
 	resp.Success(c.Writer, result)
 }
 
-// UpdateTenantHandler handles updating a tenant.
+// Update handles updating a tenant.
 //
 // @Summary Update tenant
 // @Description Update the tenant information.
@@ -142,7 +101,7 @@ func (h *TenantHandler) UserTenantHandler(c *gin.Context) {
 // @Failure 400 {object} resp.Exception "bad request"
 // @Router /v1/tenants [put]
 // @Security Bearer
-func (h *TenantHandler) UpdateTenantHandler(c *gin.Context) {
+func (h *TenantHandler) Update(c *gin.Context) {
 	slug := c.Param("slug")
 	if slug == "" {
 		resp.Fail(c.Writer, resp.BadRequest(ecode.FieldIsRequired("slug")))
@@ -165,7 +124,7 @@ func (h *TenantHandler) UpdateTenantHandler(c *gin.Context) {
 	resp.Success(c.Writer, result)
 }
 
-// GetTenantHandler handles reading tenant information.
+// Get handles reading tenant information.
 //
 // @Summary Get tenant
 // @Description Retrieve information about a specific tenant.
@@ -176,7 +135,7 @@ func (h *TenantHandler) UpdateTenantHandler(c *gin.Context) {
 // @Failure 400 {object} resp.Exception "bad request"
 // @Router /v1/tenants/{slug} [get]
 // @Security Bearer
-func (h *TenantHandler) GetTenantHandler(c *gin.Context) {
+func (h *TenantHandler) Get(c *gin.Context) {
 	result, err := h.s.Tenant.Get(c.Request.Context(), c.Param("slug"))
 	if err != nil {
 		resp.Fail(c.Writer, resp.BadRequest(err.Error()))
@@ -185,7 +144,7 @@ func (h *TenantHandler) GetTenantHandler(c *gin.Context) {
 	resp.Success(c.Writer, result)
 }
 
-// GetTenantMenuHandler handles reading tenant menu.
+// GetMenus handles reading tenant menu.
 //
 // @Summary Get tenant menu
 // @Description Retrieve the menu associated with a specific tenant.
@@ -196,7 +155,7 @@ func (h *TenantHandler) GetTenantHandler(c *gin.Context) {
 // @Failure 400 {object} resp.Exception "bad request"
 // @Router /v1/tenants/{slug}/menu [get]
 // @Security Bearer
-func (h *TenantHandler) GetTenantMenuHandler(c *gin.Context) {
+func (h *TenantHandler) GetMenus(c *gin.Context) {
 	result, err := h.s.Tenant.Get(c.Request.Context(), c.Param("slug"))
 	if err != nil {
 		resp.Fail(c.Writer, resp.BadRequest(err.Error()))
@@ -205,7 +164,7 @@ func (h *TenantHandler) GetTenantMenuHandler(c *gin.Context) {
 	resp.Success(c.Writer, result)
 }
 
-// GetTenantSettingHandler handles reading tenant setting.
+// GetTenantSetting handles reading tenant setting.
 //
 // @Summary Get tenant setting
 // @Description Retrieve the settings associated with a specific tenant.
@@ -216,7 +175,7 @@ func (h *TenantHandler) GetTenantMenuHandler(c *gin.Context) {
 // @Failure 400 {object} resp.Exception "bad request"
 // @Router /v1/tenants/{slug}/setting [get]
 // @Security Bearer
-func (h *TenantHandler) GetTenantSettingHandler(c *gin.Context) {
+func (h *TenantHandler) GetTenantSetting(c *gin.Context) {
 	result, err := h.s.Tenant.Get(c.Request.Context(), c.Param("slug"))
 	if err != nil {
 		resp.Fail(c.Writer, resp.BadRequest(err.Error()))
@@ -225,7 +184,7 @@ func (h *TenantHandler) GetTenantSettingHandler(c *gin.Context) {
 	resp.Success(c.Writer, result)
 }
 
-// DeleteTenantHandler handles deleting a tenant.
+// Delete handles deleting a tenant.
 //
 // @Summary Delete tenant
 // @Description Delete a specific tenant.
@@ -236,7 +195,7 @@ func (h *TenantHandler) GetTenantSettingHandler(c *gin.Context) {
 // @Failure 400 {object} resp.Exception "bad request"
 // @Router /v1/tenants/{slug} [delete]
 // @Security Bearer
-func (h *TenantHandler) DeleteTenantHandler(c *gin.Context) {
+func (h *TenantHandler) Delete(c *gin.Context) {
 	if err := h.s.Tenant.Delete(c.Request.Context(), c.Param("slug")); err != nil {
 		resp.Fail(c.Writer, resp.BadRequest(err.Error()))
 		return
@@ -244,7 +203,7 @@ func (h *TenantHandler) DeleteTenantHandler(c *gin.Context) {
 	resp.Success(c.Writer)
 }
 
-// ListTenantHandler handles listing tenants.
+// List handles listing tenants.
 //
 // @Summary List tenants
 // @Description Retrieve a list of tenants.
@@ -255,7 +214,7 @@ func (h *TenantHandler) DeleteTenantHandler(c *gin.Context) {
 // @Failure 400 {object} resp.Exception "bad request"
 // @Router /v1/tenants [get]
 // @Security Bearer
-func (h *TenantHandler) ListTenantHandler(c *gin.Context) {
+func (h *TenantHandler) List(c *gin.Context) {
 	params := &structs.ListTenantParams{}
 	if validationErrors, err := helper.ShouldBindAndValidateStruct(c, params); err != nil {
 		resp.Fail(c.Writer, resp.BadRequest(err.Error()))
@@ -274,7 +233,7 @@ func (h *TenantHandler) ListTenantHandler(c *gin.Context) {
 	resp.Success(c.Writer, result)
 }
 
-// ListTenantAssetHandler handles listing tenant assets.
+// ListAssets handles listing tenant assets.
 // TODO: implement this
 // @Summary List tenant assets
 // @Description Retrieve a list of assets associated with a specific tenant.
@@ -285,8 +244,8 @@ func (h *TenantHandler) ListTenantHandler(c *gin.Context) {
 // @Failure 400 {object} resp.Exception "bad request"
 // @Router /v1/tenants/{slug}/assets [get]
 // @Security Bearer
-func (h *TenantHandler) ListTenantAssetHandler(c *gin.Context) {
-	// result, err := h.svc.ListTenantAssetsService(c.Request.Context(),c.Param("slug"))
+func (h *TenantHandler) ListAssets(c *gin.Context) {
+	// result, err := h.svc.ListAssetss(c.Request.Context(),c.Param("slug"))
 	// if err != nil {
 	// 	resp.Fail(c.Writer, resp.BadRequest(err.Error()))
 	// 	return
@@ -294,7 +253,7 @@ func (h *TenantHandler) ListTenantAssetHandler(c *gin.Context) {
 	resp.Success(c.Writer)
 }
 
-// ListTenantRoleHandler handles listing tenant roles.
+// ListRoles handles listing tenant roles.
 // TODO: implement this
 // @Summary List tenant roles
 // @Description Retrieve a list of roles associated with a specific tenant.
@@ -305,8 +264,8 @@ func (h *TenantHandler) ListTenantAssetHandler(c *gin.Context) {
 // @Failure 400 {object} resp.Exception "bad request"
 // @Router /v1/tenants/{slug}/roles [get]
 // @Security Bearer
-func (h *TenantHandler) ListTenantRoleHandler(c *gin.Context) {
-	// result, err := h.svc.ListTenantRolesService(c.Request.Context(),c.Param("slug"))
+func (h *TenantHandler) ListRoles(c *gin.Context) {
+	// result, err := h.svc.ListRoless(c.Request.Context(),c.Param("slug"))
 	// if err != nil {
 	// 	resp.Fail(c.Writer, resp.BadRequest(err.Error()))
 	// 	return
@@ -314,27 +273,7 @@ func (h *TenantHandler) ListTenantRoleHandler(c *gin.Context) {
 	resp.Success(c.Writer)
 }
 
-// ListTenantModuleHandler handles listing tenant modules.
-// TODO: implement this
-// @Summary List tenant modules
-// @Description Retrieve a list of modules associated with a specific tenant.
-// @Tags tenant
-// @Produce json
-// @Param slug path string true "Tenant ID"
-// @Success 200 {object} resp.Exception "success"
-// @Failure 400 {object} resp.Exception "bad request"
-// @Router /v1/tenants/{slug}/modules [get]
-// @Security Bearer
-func (h *TenantHandler) ListTenantModuleHandler(c *gin.Context) {
-	// result, err := h.svc.ListTenantModulesService(c.Request.Context(),c.Param("slug"))
-	// if err != nil {
-	// 	resp.Fail(c.Writer, resp.BadRequest(err.Error()))
-	// 	return
-	// }
-	resp.Success(c.Writer)
-}
-
-// ListTenantSettingHandler handles listing tenant settings.
+// GetSetting handles listing tenant settings.
 // TODO: implement this
 // @Summary List tenant settings
 // @Description Retrieve a list of settings associated with a specific tenant.
@@ -345,8 +284,8 @@ func (h *TenantHandler) ListTenantModuleHandler(c *gin.Context) {
 // @Failure 400 {object} resp.Exception "bad request"
 // @Router /v1/tenants/{slug}/settings [get]
 // @Security Bearer
-func (h *TenantHandler) ListTenantSettingHandler(c *gin.Context) {
-	// result, err := h.svc.ListTenantSettingsService(c.Request.Context(),c.Param("slug"))
+func (h *TenantHandler) GetSetting(c *gin.Context) {
+	// result, err := h.svc.GetSettings(c.Request.Context(),c.Param("slug"))
 	// if err != nil {
 	// 	resp.Fail(c.Writer, resp.BadRequest(err.Error()))
 	// 	return
@@ -354,7 +293,7 @@ func (h *TenantHandler) ListTenantSettingHandler(c *gin.Context) {
 	resp.Success(c.Writer)
 }
 
-// ListTenantUserHandler handles listing tenant users.
+// ListUsers handles listing tenant users.
 // TODO: implement this
 // @Summary List tenant users
 // @Description Retrieve a list of users associated with a specific tenant.
@@ -365,8 +304,8 @@ func (h *TenantHandler) ListTenantSettingHandler(c *gin.Context) {
 // @Failure 400 {object} resp.Exception "bad request"
 // @Router /v1/tenants/{slug}/users [get]
 // @Security Bearer
-func (h *TenantHandler) ListTenantUserHandler(c *gin.Context) {
-	// result, err := h.svc.ListTenantUsersService(c.Request.Context(),c.Param("slug"))
+func (h *TenantHandler) ListUsers(c *gin.Context) {
+	// result, err := h.svc.ListUserss(c.Request.Context(),c.Param("slug"))
 	// if err != nil {
 	// 	resp.Fail(c.Writer, resp.BadRequest(err.Error()))
 	// 	return
@@ -374,7 +313,7 @@ func (h *TenantHandler) ListTenantUserHandler(c *gin.Context) {
 	resp.Success(c.Writer)
 }
 
-// ListTenantGroupHandler handles listing tenant groups.
+// ListGroups handles listing tenant groups.
 // TODO: implement this
 // @Summary List tenant groups
 // @Description Retrieve a list of groups associated with a specific tenant.
@@ -385,8 +324,8 @@ func (h *TenantHandler) ListTenantUserHandler(c *gin.Context) {
 // @Failure 400 {object} resp.Exception "bad request"
 // @Router /v1/tenants/{slug}/groups [get]
 // @Security Bearer
-func (h *TenantHandler) ListTenantGroupHandler(c *gin.Context) {
-	// result, err := h.svc.ListTenantGroupsService(c.Request.Context(),c.Param("slug"))
+func (h *TenantHandler) ListGroups(c *gin.Context) {
+	// result, err := h.svc.ListGroupss(c.Request.Context(),c.Param("slug"))
 	// if err != nil {
 	// 	resp.Fail(c.Writer, resp.BadRequest(err.Error()))
 	// 	return
